--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,38 +1,38 @@
 !!! 5
 %html
   %head
-    %meta{'charset'=>'utf-8'}
+    %meta{ charset: 'utf-8' }
+    %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
     %title= page_title
-    - cache "assets" do
-      = render 'layouts/assets'
+    /[if IE]
+      %meta{ "http-equiv" => "X-UA-Compatible", "content" => "IE=edge"}
+    /[if lte IE 8]
+      = javascript_include_tag "#{APP_CONFIG['assets_url_base']}html5shiv-printshiv.js"
+    = stylesheet_link_tag "#{APP_CONFIG['assets_url_base']}malmo.css", media: 'all'
+    = stylesheet_link_tag "application", media: 'all'
+    /[if lte IE 7]
+      = stylesheet_link_tag "#{APP_CONFIG['assets_url_base']}legacy/ie7.css", media: 'all'
     = csrf_meta_tag
-  %body{ :class => "nursing-homes#{@body_classes}" }
-    .wrap-all
-      = raw @masthead
-      .main
-        .columns-2
-          .content-wrapper
-            .content-wrapper-1
-              .content-wrapper-2
-                .content-wrapper-3
-                  .content-wrapper-4
-                    .content-wrapper-5
-                      .content-wrapper-6
-                        .application
-                          - if current_user
-                            %ul#user-menu
-                              %li.displayname= "Inloggad som #{current_user.displayname}"
-                              - if current_user.is_admin
-                                %li.users= link_to 'Hantera användare', users_path
-                              %li.logout= link_to "Logga ut", logout_path
-                          - cache "breadcrumbs" do
-                            = render "layouts/breadcrumbs"
-                          .main-content-nursing_homes
-                            = render "layouts/flash", :flash => flash
-                            = yield
-          - unless params[:controller] == "nursing_homes" and params[:action] == "compare"
-            .aside
-              = render 'layouts/contact-box'
-              - cache "compare-box" do
-                = render 'layouts/compare-box'
-              = yield :travel
+  %body{ class: "#{@body_classes} malmo-form nursing-homes" }
+    .wrapper
+      - flash.each do |key, value|
+        %p{ class: "flash #{key}" }= value
+
+      = yield
+
+      - if current_user
+        %ul#user-menu
+          %li.displayname= "Inloggad som #{current_user.displayname}"
+          - if current_user.is_admin
+            %li.users= link_to 'Hantera användare', users_path
+          %li.logout= link_to "Logga ut", logout_path
+
+      - unless params[:controller] == "nursing_homes" && params[:action] == "compare"
+        .aside
+          = render 'layouts/contact-box'
+          - cache "compare-box" do
+            = render 'layouts/compare-box'
+          = render 'layouts/travel-box'
+
+    = javascript_include_tag "#{APP_CONFIG['assets_url_base']}malmo.js"
+    = javascript_include_tag "application"
