--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,2 +1,4 @@
 @import 'variables', 'mixins', 'functions',
-        'core', 'edit'
+        'core', 'filter', 'results', 'record', 'aside',
+        'edit',
+        'media_queries', 'media_queries_print'
