--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1,32 +1,21 @@
 body {
   padding: 0 .5em;
-  min-width: 56em;
+  min-width: 58em;
   margin-top: 0;
   margin-right: 1em;
   margin-left: 1em;
 }
 
+#malmo-masthead {
+  max-width: 58em;
+}
+
 .wrapper {
-  max-width: 56em;
-  margin: 2em auto 0;
+  max-width: 58em;
+  margin: 0em auto 0;
   @include clearfix();
 }
 
-.main-content-nursing_homes {
-  clear: both;
-  padding: 1.5em 0 2em;
-  overflow: hidden;
-}
-
-#tab-element-container {
-  padding: 0;
-  #tab-element-map {
-    padding-bottom: 1em;
-    #inline-map {
-      border: 1px solid #c0c0c0;
-    }
-  }
-}
 
 ul, ol {
   list-style: none;
@@ -36,25 +25,6 @@ ul, ol, li {
   padding: 0;
 }
 
-
-.form-row.name {
-  padding: .4em .8em;
-  border: 1px solid #c0c0c0;
-  @include radius(3px);
-  margin-bottom: 1em;
-  label {
-     display: inline;
-     margin-right: .5em;
-     font-size: .929em;
-  }
-  input {
-     width: 22em;
-  }
-}
-
-div.ui-tabs .ui-widget-content {
-  padding-bottom: 0;
-}
 
 .graph {
   width: 100px;
@@ -70,7 +40,7 @@ div.ui-tabs .ui-widget-content {
 
 .actions {
   float: right;
-  font-size: .925em;
+  font-size: emize(13);
   li {
     margin-left: .4em;
   }
@@ -92,19 +62,13 @@ div.ui-tabs .ui-widget-content {
 ul#user-menu {
   float: right;
   li {
-    font-size: .857em;
+    font-size: emize(13);
+    line-height: 1.3;
     text-align: right;
-    line-height: 1.3em;
   }
 }
 
-
-.ui-tabs .ui-tabs-hide {
-    position: absolute;
-    left: -10000px;
-}
-
-#tab-element-map iframe {
+iframe {
   width: 100%;
   height: 500px;
   border: none;
