Refactoring: record => show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
 @import 'variables', 'mixins', 'functions',
-        'core', 'filter', 'results', 'record', 'aside',
+        'core', 'filter', 'results', 'show', 'aside',
         'edit',
         'media_queries', 'media_queries_print'
