--- a/app/views/layouts/_contact-box.html.haml
+++ b/app/views/layouts/_contact-box.html.haml
@@ -32,5 +32,5 @@
             %dd.more-information= link_to "Hur ansöker jag?", contact_data['more_information_link'] unless contact_data['name']
 
         %p.more-info
-          .tiny-button= link_to "Hur ansöker jag?", "http://www.malmo.se/ansokanomaldreboenden"
+          = link_to "Hur ansöker jag?", "http://www.malmo.se/ansokanomaldreboenden", class: "btn"
 //eri-no-index
