--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -18,4 +18,4 @@
         %td= link_to 'Växla roll', toggle_admin_user_path(user), :method => :put
         %td= link_to 'Ta bort', user, confirm: 'Vill du ta bort användaren?', :method => :delete
 %ul.actions
-  %li.tiny-button= link_to "Lägg till användare", new_user_path
+  %li= link_to "Lägg till användare", new_user_path, class: "btn btn-primary"
