--- a/app/views/nursing_homes/show.html.haml
+++ b/app/views/nursing_homes/show.html.haml
@@ -4,8 +4,8 @@
 - if current_user
   #additional-bottom-show
     %ul.actions
-      %l= link_to 'Redigera', edit_nursing_home_path(@nursing_home), class: "btn"
-      %li= link_to 'Ta bort', nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', :method => :delete, , class: "btn btn-danger"
+      %li= link_to 'Redigera', edit_nursing_home_path(@nursing_home), class: "btn"
+      %li= link_to 'Ta bort', nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger"
 
 - cache @nursing_home do
   %h1= @nursing_home.name
@@ -20,11 +20,11 @@
     /     %li.count
     /   .images.clearfix
     /     - @nursing_home.images.each do |img|
-    /       = image_tag img.image.url(:medium), :alt => @nursing_home.name
+    /       = image_tag img.image.url(:medium), alt: @nursing_home.name
     .compare-check
       = check_box_tag "compare-#{@nursing_home.id}", @nursing_home.id, false, "data-compare" => @nursing_home.id
       = label_tag "compare-#{@nursing_home.id}", "Lägg till i Min lista"
-    .show-on-map= link_to "Visa på karta", "http://www.malmo.se/karta?poi=#{u(@nursing_home.address)}&center=#{@nursing_home.geo_position_x},#{@nursing_home.geo_position_y}&zoomlevel=4&maptype=karta", :title => @nursing_home.address, :id => "show-address-on-map", class: "btn"
+    .show-on-map= link_to "Visa på karta", "http://www.malmo.se/karta?poi=#{u(@nursing_home.address)}&center=#{@nursing_home.geo_position_x},#{@nursing_home.geo_position_y}&zoomlevel=4&maptype=karta", title: @nursing_home.address, id: "show-address-on-map", class: "btn"
     //eri-no-index
 
     %dl.details
@@ -68,7 +68,7 @@
     %h2 Andra äldreboenden i närheten
     %ul.nearby
       - @nearby_homes.each do |key, value|
-        %li= link_to "#{value[:name]} (#{ number_to_human( value[:distance], :units => :distance, :precision => 2 )})", nursing_home_path(key)
+        %li= link_to "#{value[:name]} (#{ number_to_human( value[:distance], units: :distance, precision: 2 )})", nursing_home_path(key)
 
     - if @nursing_home.attachments.present?
       %h2 Bilagor
@@ -87,4 +87,4 @@
   #additional-bottom-show
     %ul.actions
       %li= link_to 'Redigera', edit_nursing_home_path(@nursing_home), class: "btn"
-      %li= link_to 'Ta bort', nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', :method => :delete, class: "btn btn-danger"
+      %li= link_to 'Ta bort', nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger"
