--- a/app/views/layouts/_compare-box.html.haml
+++ b/app/views/layouts/_compare-box.html.haml
@@ -1,6 +1,8 @@
+/ eri-no-index
 #compare-box
   %h2 Min lista
   %p.status
   .status-list
   %p.how-to= 'Kryssa i "Visa i Min lista" intill ett boende för att lägga till det till din jämförelselista.'
   = link_to "Jämför", compare_nursing_homes_path, class: "btn"
+//eri-no-index
