--- a/app/views/layouts/_contact-box.html.haml
+++ b/app/views/layouts/_contact-box.html.haml
@@ -1,36 +1,31 @@
 / eri-no-index
-.contact-box
-  .contact-box-header
-    %h2 Kontakta oss
-  .contact-box-content-wrapper
-    .contact-box-content-container
-      .contact-box-content.clearfix
-        - if contact_data.blank?
-          %p.more-info
-            = t("contact_more_information")
-            = link_to "Läs mer", t("contact_more_information_link")
+#contact-box
+  %h2 Kontakta oss
+  - if contact_data.blank?
+    %p.more-info
+      = t("contact_more_information")
+      = link_to "Läs mer", t("contact_more_information_link"), class: "btn"
+  - else
+    %dl
+      %dt.name= contact_data['name'] or "Nytt äldreboende"
+      - unless contact_data['address'].blank?
+        %dd.address= contact_data['address']
+      - unless contact_data['post_code'].blank?
+        %dd.post_code= "#{contact_data['post_code']} #{contact_data['postal_town']}"
+      - unless contact_data['address'].blank?
+        %dd.map= link_to "Visa på karta", u(contact_data['address']), :title => contact_data['address'], :class => "show-single-location"
 
-        - else
-          %dl
-            %dt.name= contact_data['name'] or "Nytt äldreboende"
-            - unless contact_data['address'].blank?
-              %dd.address= contact_data['address']
-            - unless contact_data['post_code'].blank?
-              %dd.post_code= "#{contact_data['post_code']} #{contact_data['postal_town']}"
-            - unless contact_data['address'].blank?
-              %dd.map= link_to "Visa på karta", u(contact_data['address']), :title => contact_data['address'], :class => "show-single-location"
+      - unless contact_data['email'].blank?
+        %dd.epost= "E-post: #{contact_data['email']}"
+      - unless contact_data['phone'].blank?
+        %dd.tel= "Telefon: #{contact_data['phone']}"
+      - unless contact_data['fax'].blank?
+        %dd.tel= "Fax: #{contact_data['fax']}"
 
-            - unless contact_data['email'].blank?
-              %dd.epost= "E-post: #{contact_data['email']}"
-            - unless contact_data['phone'].blank?
-              %dd.tel= "Telefon: #{contact_data['phone']}"
-            - unless contact_data['fax'].blank?
-              %dd.tel= "Fax: #{contact_data['fax']}"
+      - unless contact_data['url'].blank?
+        %dd.url= link_to "Webbplats", contact_data['url']
+      %dd.more-information= link_to "Hur ansöker jag?", contact_data['more_information_link'] unless contact_data['name']
 
-            - unless contact_data['url'].blank?
-              %dd.url= link_to "Webbplats", contact_data['url']
-            %dd.more-information= link_to "Hur ansöker jag?", contact_data['more_information_link'] unless contact_data['name']
-
-        %p.more-info
-          = link_to "Hur ansöker jag?", "http://www.malmo.se/ansokanomaldreboenden", class: "btn"
+    %p.more-info
+      = link_to "Hur ansöker jag?", "http://www.malmo.se/ansokanomaldreboenden", class: "btn"
 //eri-no-index
