--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
     = stylesheet_link_tag "application", media: 'all'
     /[if lte IE 7]
       = stylesheet_link_tag "#{APP_CONFIG['assets_url_base']}legacy/ie7.css", media: 'all'
+    %link{ rel: 'icon', type: 'image/x-icon', href: "#{APP_CONFIG['assets_url_base']}favicon.ico" }
     = csrf_meta_tag
   %body{ class: "#{@body_classes} malmo-form nursing-homes" }
     .wrapper
