--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -14,7 +14,15 @@ body {
   max-width: 58em;
   margin: 0em auto 0;
   @include clearfix();
+  > .main {
+    @include columns(9);
+  }
+  > aside {
+    @include columns(3, true);
+  }
 }
+
+
 
 iframe {
   width: 100%;
