Compare and contact boxes

--- a/app/views/layouts/_compare-box.html.haml
+++ b/app/views/layouts/_compare-box.html.haml
@@ -4,5 +4,5 @@
   %p.status
   .status-list
   %p.how-to= 'Kryssa i "Visa i Min lista" intill ett boende för att lägga till det till din jämförelselista.'
-  = link_to "Jämför", compare_nursing_homes_path, class: "btn"
+  = link_to "Jämför", compare_nursing_homes_path, class: "btn compare"
 //eri-no-index
