--- a/app/assets/stylesheets/aside.css.scss
+++ b/app/assets/stylesheets/aside.css.scss
@@ -1,8 +1,21 @@
-#contact-box {
-  background-color: #fff;
-  .contact-box-content {
-    padding-bottom: 3em;
+aside section {
+  margin-bottom: 1.5em;
+  h1 {
+    font-family: $sansSerif;
+    font-size: emize(15);
+    font-weight: bold;
+    line-height: 1;
+    border-bottom: $border;
+    margin: 0 0 .4em;
+    padding-bottom: .2em;
   }
+  p {
+    font-size: emize(14);
+    line-height: 1.3;
+  }
+}
+
+#contact-box {
   dl {
     dt {
       padding: .8em 0 0;
@@ -24,56 +37,27 @@
       font-family: $sansSerif;
     }
   }
-  .more-info a:after {
-    content: none;
-  }
 }
 
 #compare-box {
-  padding: 0;
-  margin-bottom: 1em;
-  .content-wrapper {
-      padding: 0;
-      width: 16em;
-    .content-wrapper-1 {
-      padding: 0;
+  min-height: 4em;
+  .status-list ul {
+    margin-bottom: 1em;
+    li {
+      font-family: $sansSerif;
+      font-size: emize(13);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      a {
+        margin-right: .5em;
+      }
     }
-    .content-wrapper-6 {
-      min-height: 4em;
-      padding: 0 0 1em;
-      margin: 0;
-      h2 {
-        font-size: .9285em;
-        color: #fff;
-        padding: .65em 1em .5em;
-      }
-      p {
-        display: none;
-        margin: .7em 1em .7em;
-        font-size: .929em;
-      }
-      .status {
-        margin: .7em;
-      }
-      .status-list ul {
-        margin: .7em .4em 1em .9em;
-        li {
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          font-size: .929em;
-          margin-bottom: 0em;
-          a {
-            margin-right: .5em;
-          }
-        }
-        li .remove {
-          float: right;
-          width: 20px;
-          height: 20px;
-          cursor: pointer;
-        }
-      }
+    li .remove {
+      float: right;
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
     }
   }
 }
