--- a/app/views/layouts/_compare-box.html.haml
+++ b/app/views/layouts/_compare-box.html.haml
@@ -3,5 +3,5 @@
   %h1 Min lista
   .status-list
   %p.how-to= 'Kryssa i "Visa i Min lista" intill ett boende för att lägga till det till din jämförelselista.'
-  = link_to "Jämför", compare_nursing_homes_path, class: "btn btn-small compare"
+  = link_to "Jämför dessa", compare_nursing_homes_path, class: "btn btn-small compare"
 //eri-no-index
