--- a/app/assets/stylesheets/filter.css.scss
+++ b/app/assets/stylesheets/filter.css.scss
@@ -13,7 +13,7 @@
     border: none;
     margin: 0 .5em 1em;
     padding: 0;
-    font-size: .929em;
+    font-size: emize(13);
     .form-row.neighborhood,
     .form-row.category,
     .form-row.owner-type,
