--- a/app/views/nursing_homes/edit.html.haml
+++ b/app/views/nursing_homes/edit.html.haml
@@ -1,3 +1,7 @@
 %h1 Redigera äldreboendet
 
+#additional-bottom-show
+  %ul.actions
+    %li= link_to 'Ta bort', nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger btn-small"
+
 = render 'form'
