--- a/app/views/nursing_homes/show.html.haml
+++ b/app/views/nursing_homes/show.html.haml
@@ -1,30 +1,26 @@
-%ul.actions
-  %li= link_to 'Visa alla boenden', root_path, class: "btn"
+.main.show.body-copy{ class: ("drafted" if @nursing_home.draft) }
+  .actions
+    = link_to 'Visa alla boenden', root_path, class: "btn btn-small"
+    - if current_user
+      = link_to 'Redigera', edit_nursing_home_path(@nursing_home), class: "btn btn-small"
 
-- if current_user
-  #additional-bottom-show
-    %ul.actions
-      %li= link_to 'Redigera', edit_nursing_home_path(@nursing_home), class: "btn"
-      %li= link_to 'Ta bort', nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger"
-
-- cache @nursing_home do
-  .main.show.body-copy{ class: ("drafted" if @nursing_home.draft) }
+  - cache @nursing_home do
     %h1= @nursing_home.name
     .description
       = raw sanitize @nursing_home.description, tags: %w(h2 p)
     / eri-no-index
-    / #slideshow.clearfix
-    /   %ul.controls.clearfix
-    /     %li.prev Föregående
-    /     %li.next Nästa
-    /     %li.count
-    /   .images.clearfix
-    /     - @nursing_home.images.each do |img|
-    /       = image_tag img.image.url(:medium), alt: @nursing_home.name
+    #slideshow.clearfix
+      %ul.controls.clearfix
+        %li.prev Föregående
+        %li.next Nästa
+        %li.count
+      .images.clearfix
+        - @nursing_home.images.each do |img|
+          = image_tag img.image.url(:medium), alt: @nursing_home.name
     .compare-check
       = check_box_tag "compare-#{@nursing_home.id}", @nursing_home.id, false, "data-compare" => @nursing_home.id
       = label_tag "compare-#{@nursing_home.id}", "Lägg till i Min lista"
-    .show-on-map= link_to "Visa på karta", "http://www.malmo.se/karta?poi=#{u(@nursing_home.address)}&center=#{@nursing_home.geo_position_x},#{@nursing_home.geo_position_y}&zoomlevel=4&maptype=karta", title: @nursing_home.address, id: "show-address-on-map", class: "btn"
+    .show-on-map= link_to "Visa på karta", "http://www.malmo.se/karta?poi=#{u(@nursing_home.address)}&center=#{@nursing_home.geo_position_x},#{@nursing_home.geo_position_y}&zoomlevel=4&maptype=karta", title: @nursing_home.address, id: "show-address-on-map", class: "btn btn-small"
     //eri-no-index
 
     %dl.details
@@ -80,11 +76,7 @@
 
     %p.note.updated= "Informationen om äldreboendet uppdaterades #{ @nursing_home.updated_at.strftime('%Y-%m-%d') }."
 
-%ul.actions
-  %li= link_to 'Visa alla boenden', root_path, class: "btn"
-
-- if current_user
-  #additional-bottom-show
-    %ul.actions
-      %li= link_to 'Redigera', edit_nursing_home_path(@nursing_home), class: "btn"
-      %li= link_to 'Ta bort', nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger"
+  .actions.bottom
+    = link_to 'Visa alla boenden', root_path, class: "btn btn-small"
+    - if current_user
+      = link_to 'Redigera', edit_nursing_home_path(@nursing_home), class: "btn btn-small"
