--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -1,10 +1,10 @@
 /* Results list */
 ul.results {
-  @include radius(3px);
+  @include clearfix();
   li {
     margin-bottom: 1em;
     a {
-      @include radius(3px);
+      @include clearfix();
     }
     &.active a {
       color: #000;
@@ -14,12 +14,13 @@ ul.results {
     float: right;
     width: 75%;
     .basic-data {
+      font-family: $sansSerif;
       padding: .3em .5em .5em;
-      background: #f2f2f2;
-      border-top: #c0c0c0 solid 1px;
+      background: $backgroundLight;
+      border-top: $border;
       margin-bottom: .5em;
       a {
-        color: #007133;
+        color: $linkColor;
       }
       h2 {
         margin-bottom: .15em;
@@ -53,7 +54,9 @@ ul.results {
         padding: 0;
       }
       label {
+        display: inline;
         font-size: emize(13);
+        font-family: $sansSerif;
         margin-left: 0;
       }
     }
@@ -63,7 +66,7 @@ ul.results {
     width: 22%;
     img {
       width: 100%;
-      border: 1px solid #999;
+      border: $border;
     }
   }
 }
