--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -11,36 +11,22 @@ ul.results {
     }
   }
   .summary {
-    float: right;
-    width: 75%;
-    .basic-data {
+    @include columns(9, true);
+    margin-bottom: .5em;
+    h2 {
       font-family: $sansSerif;
-      padding: .3em .5em .5em;
-      background: $backgroundLight;
-      border-top: $border;
+      font-size: emize(15);
+      margin: 0 0 .2em;
+      padding: 0;
+    }
+    .neighborhood, .owner-type {
+      font-family: $sansSerif;
+      font-size: emize(13);
+      line-height: 1.3;
+      margin: 0;
+    }
+    .owner-type:last-child {
       margin-bottom: .5em;
-      a {
-        color: $linkColor;
-      }
-      h2 {
-        margin-bottom: .15em;
-        font-size: 1em;
-      }
-      dl {
-        margin: 0;
-        dt {
-          clear: left;
-          float: left;
-          width: 8em;
-        }
-        dd {
-          margin-left: 8em;
-        }
-      }
-      .neighborhood, .owner-type, .category, .show {
-        font-size: emize(13);
-        line-height: 1.3;
-      }
     }
 
     p {
@@ -62,10 +48,10 @@ ul.results {
     }
   }
   .image {
-    float: left;
-    width: 22%;
+    @include columns(3);
     img {
       width: 100%;
+      height: auto;
       border: $border;
     }
   }
