--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -12,7 +12,7 @@ ul.results {
   }
   .summary {
     @include columns(9, true);
-    margin-bottom: .5em;
+    margin-bottom: 1em;
     h2 {
       font-family: $sansSerif;
       font-size: emize(15);
@@ -22,10 +22,10 @@ ul.results {
     .neighborhood, .owner-type {
       font-family: $sansSerif;
       font-size: emize(13);
-      line-height: 1.3;
+      line-height: 1.4;
       margin: 0;
     }
-    .owner-type:last-child {
+    .owner-type {
       margin-bottom: .5em;
     }
 
@@ -34,22 +34,17 @@ ul.results {
     }
     .compare-check {
       float: right;
-      margin: .4em .7em 0;
-      input {
-        margin: 3px 0 0;
-        padding: 0;
-      }
       label {
         display: inline;
         font-size: emize(13);
         font-family: $sansSerif;
-        margin-left: 0;
       }
     }
   }
   .image {
     @include columns(3);
     img {
+      margin-top: .3em;
       width: 100%;
       height: auto;
       border: $border;
