--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -16,6 +16,8 @@
             .image= link_to image_tag(nursing_home.images.first.image.url(:thumb), :alt => nursing_home.name), nursing_home
           .summary
             .compare-check
+              / %a.btn.btn-small.btn-primary{ id: "compare-#{nursing_home.id}", "data-compare" => nursing_home.id, href: nursing_home_path(nursing_home)}
+              /   %span.icon-plus= "Lägg till"
               = check_box_tag "compare-#{nursing_home.id}", nursing_home.id, false, "data-compare" => nursing_home.id
               = label_tag "compare-#{nursing_home.id}", "Lägg till i Min lista"
 
