--- a/app/assets/stylesheets/aside.css.scss
+++ b/app/assets/stylesheets/aside.css.scss
@@ -51,6 +51,7 @@ aside section {
       text-overflow: ellipsis;
       a {
         margin-right: .5em;
+        color: black;
       }
     }
     li .remove {
