Add and remove from compare list

--- a/app/assets/stylesheets/aside.css.scss
+++ b/app/assets/stylesheets/aside.css.scss
@@ -54,11 +54,15 @@ aside section {
         color: black;
       }
     }
-    li .remove {
+    li .icon-remove {
       float: right;
       width: 20px;
       height: 20px;
       cursor: pointer;
+      color: $backgroundDark;
+      &:hover {
+        color: $dangerColor;
+      }
     }
   }
 }
