--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -16,6 +16,7 @@ body {
   @include clearfix();
   > .main {
     @include columns(9);
+    margin-top: -.4em;
   }
   > aside {
     @include columns(3, true);
