Upgrade to Cycle2 API

--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -5,9 +5,9 @@
     %h1.title= "Hitta & jämför äldreboenden"
     = render 'filter'
 
-    %ul.switch-view
-      %li.active= link_to "Översikt", '#tab-element-list'
-      %li= link_to "Visa på karta", '#tab-element-map'
+    / %ul.switch-view
+    /   %li.active= link_to "Översikt", '#tab-element-list'
+    /   %li= link_to "Visa på karta", '#tab-element-map'
 
     %ul.results
       - @nursing_homes.each do |nursing_home|
