--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -12,11 +12,10 @@ body {
 }
 
 .wrapper {
-  margin: 0em auto 0;
+  margin: 0 auto;
   @include clearfix();
   > .main {
     @include columns(9);
-    margin-top: -.4em;
   }
   > aside {
     @include columns(3, true);
