Helpers for add/destory buttons

--- a/app/views/nursing_homes/edit.html.haml
+++ b/app/views/nursing_homes/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Redigera äldreboendet
+.body-copy
+  %h1 Redigera äldreboendet
 
-#additional-bottom-show
-  %ul.actions
-    %li= link_to 'Ta bort', nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger btn-small"
+%menu.actions
+  %li= link_to delete_icon_text, nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger btn-small"
 
 = render 'form'
