--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -1,6 +1,6 @@
 .main
   - if current_user
-    = link_to 'Nytt äldreboende', new_nursing_home_path, class: "btn btn-small btn-primary new"
+    = link_to add_icon_text, new_nursing_home_path, class: "btn btn-small btn-primary new"
   - cache do
     %h1.title= "Hitta & jämför äldreboenden"
     = render 'filter'
